--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang "en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, intial-scale-1.0">
-    <title>Lab-1</title> 
-</head>
-<body>
-    <p><b>Оформленный текст</b></p>
-    <p>Общее количество перестановок из <i>n</i> элементов равно 
-    <b>произведению всех чисел </b> от <i>1</i> до <i>n:</i></p>
-    <p>P<sub>n</sub>=1&bull;2&bull;3&bull;&hellip;&bull;(n-2)&bull;(n-1)&bull;n.</p>
-    <br>
-    <br>
-    <p><b>Список</b></p>
-        <dl>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width-device-width, intial-scale-1.0">
+        <title>Lab-1</title> 
+    </head>
+    <body>
+
+        <p><b>Оформленный текст</b></p>
+        <p>Общее количество перестановок из <i>n</i> элементов равно 
+        <b>произведению всех чисел </b> от <i>1</i> до <i>n:</i></p>
+        <p>P<sub>n</sub>=1&bull;2&bull;3&bull;&hellip;&bull;(n-2)&bull;(n-1)&bull;n.</p>
+        <p><b>Список</b></p>
+            <dl>
             <dt>ITex</dt>
                 <dd>INTERNET-технологии</dd>
             <dt>АК</dt>
@@ -28,7 +28,7 @@
                 <dd>Моделирование систем</dd>
             <dt>ПУ</dt>
                 <dd>Психология управления</dd>
-            <dt>СПО </dt>
+            <dt>СПО</dt>
                 <dd>Системное програмное обеспечение</dd>
             <dt>СПиК</dt>
                 <dd>Социальная психология и конфликтология</dd>
@@ -36,17 +36,17 @@
                 <dd>Физическое воспитание</dd>
             <dt>ФПр</dt>
                 <dd>Функцианольное програмирование</dd>
-        </dl>
-        <p><b>Таблица</b></p>
-        <table border="1">
+            </dl>
+            <p><b>Таблица</b></p>
+            <table border="3">
             <tr>
                 <td colspan="4" align="center">Таблица переодических элементов</td>   
             </tr>
             <tr>
-                <td>Обозначение</td>
-                <td>Название</td>
-                <td>Атомное число</td>
-                <td>Атомная масса</td>
+                <th>Обозначение</th>
+                <th>Название</th>
+                <th>Атомное число</th>
+                <th>Атомная масса</th>
             </tr>
             <tr>
                 <td>Li</td>
@@ -96,43 +96,49 @@
                 <td>10</td>
                 <td>20,179</td>
             </tr>
-        </table>
-        <p><b>Форма с управляющими элементами</b></p>   
-        <form>
-            <label>Комплектующие компьютера</label>
-            <br>Процессор:
-            <input type="text"> 
-            <br/>
-            <br>Видеокарта:
-            <input type="text"> 
-            <br/>
-            <br>Материнская плата:
-            <input type="text"> 
-            <br/>
-            <br>Охлодительная система:
-            <input type="text"> 
-            <br/>
-            <br>Блок питания:
-            <input type="text"> 
-            <br/>
-            <br>Системный корпус:
-            <input type="text"> 
-            <br/>
-            <br>Устройство хранения данных:
-            <input type="text"> 
-            <br/>
-            <br>Оперативная память:
-            <input type="text"> 
-            <br/>
-            <input value="Find" type = "submit">
-        </form>
-        <img src="Nure.png" usemap="#hmap">
-<map name="hmap">
-<area href="https://nure.ua/ru/" shape="rect" coords="0,0,100,100">
-<area href="https://cist.nure.ua/ias/app/tt/f?p=778:2:3742040164860787" shape="rect"
-coords="101,0,225,100">
-<area href="https://dec.nure.ua/" shape="rect"
-coords="0,100,225,225">
-</map>
-
-</body>
+            </table>
+            <p><b>Форма с управляющими элементами</b></p>   
+            <form>
+               <label>Комплектующие компьютера:</label>
+                <br>Процессор:
+                <input type="text" placeholder="Что ищем?"> 
+                <br/>
+                <br>Видеокарта:
+                <input type="text" placeholder="Что ищем?"> 
+                <br/>
+                <br>Материнская плата:
+                <input type="text" placeholder="Что ищем?"> 
+                <br/>
+                <br>Охлодительная система:
+                <input type="text" placeholder="Что ищем?"> 
+                <br/>
+                <br>Блок питания:
+                <input type="text" placeholder="Что ищем?"> 
+                <br/>
+                <br>Системный корпус:
+                <input type="text" placeholder="Что ищем?"> 
+                <br/>
+                <br>Устройство хранения данных:
+                <input type="text" placeholder="Что ищем?"> 
+                <br/>
+                <br>Оперативная память:
+                <input type="text" placeholder="Что ищем?"> 
+                <br/>
+                <input value="Поиск" type = "submit">
+            </form>
+        <img src="Nure.png" usemap="#hmap" width ="300" height="300" alt="DL Nure">
+        <map name="hmap">
+            <area href="https://nure.ua/ru/" shape="rect" coords="0,0,100,100" alt="text">
+            <area href="https://cist.nure.ua/ias/app/tt/f?p=778:2:3742040164860787" shape="rect" coords="101,0,300,100" alt="text">
+            <area href="https://dec.nure.ua/" shape="rect" coords="0,100,300,300" alt="text">
+        </map>
+        <ol>
+            <li value = "0">
+                qwerty
+            </li>
+            <li>
+                ytrewq
+            </li>
+        </ol>
+    </body>
+</html>
